force-app/main/default/objects/Legacy_Account__c/Legacy_Account__c.object-meta.xml
<CustomObject>
    <description>Legacy account</description>
    <label>Legacy Account</label>
    <nameField>
        <label>Legacy Account</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legacy Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>