force-app/main/default/objects/Legacy_Account__c/fields/Covetrus_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Covetrus_Customer_Number__c</fullName>
    <formula>Parent_Account__r.Covetrus_Customer_Number__c</formula>
    <label>Covetrus Customer Number</label>
    <type>Text</type>
</CustomField>