force-app/main/default/objects/Legacy_Account__c/fields/Inactive_Account__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Displays status of account.</description>
    <inlineHelpText>Displays status of account.</inlineHelpText>
    <label>Inactive Account</label>
    <type>Checkbox</type>
</CustomField>