force-app/main/default/objects/Legacy_Account__c/fields/Legacy_CRM_Source__c.field-meta.xml
<CustomField>
    <fullName>Legacy_CRM_Source__c</fullName>
    <description>Legacy CRM Source Code</description>
    <externalId>true</externalId>
    <inlineHelpText>Legacy CRM Source Code</inlineHelpText>
    <label>Legacy CRM Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>