force-app/main/default/objects/Legacy_Account__c/fields/Legacy_CRM_Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_CRM_Source_ID__c</fullName>
    <description>Legacy CRM Source Identifier (Unique Key from Legacy CRM)</description>
    <externalId>true</externalId>
    <inlineHelpText>Legacy CRM Source Identifier (Unique Key from Legacy CRM)</inlineHelpText>
    <label>Legacy CRM Source ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>