force-app/main/default/objects/Legacy_Account__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent account associated to legacy account.</description>
    <inlineHelpText>Parent account associated to legacy account.</inlineHelpText>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Legacy Accounts</relationshipLabel>
    <relationshipName>Legacy_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>