force-app/main/default/objects/Legacy_Account__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <description>Displays shipping address for Legacy Account.</description>
    <inlineHelpText>Displays shipping address for Legacy Account.</inlineHelpText>
    <label>Shipping Address</label>
    <type>TextArea</type>
</CustomField>