force-app/main/default/objects/Legacy_Account__c/fields/Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City__c</fullName>
    <description>Displays Shipping City for Legacy Account.</description>
    <inlineHelpText>Displays Shipping City for Legacy Account.</inlineHelpText>
    <label>Shipping City</label>
    <length>250</length>
    <type>Text</type>
</CustomField>