force-app/main/default/objects/Legacy_Account__c/fields/Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Country__c</fullName>
    <description>Displays Shipping country for Legacy Account.</description>
    <inlineHelpText>Displays Shipping country for Legacy Account.</inlineHelpText>
    <label>Shipping Country</label>
    <length>250</length>
    <type>Text</type>
</CustomField>