force-app/main/default/objects/Legacy_Account__c/fields/Shipping_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State_Province__c</fullName>
    <description>Displays Shipping State/Province for Legacy Account.</description>
    <inlineHelpText>Displays Shipping State/Province for Legacy Account.</inlineHelpText>
    <label>Shipping State/Province</label>
    <length>250</length>
    <type>Text</type>
</CustomField>