force-app/main/default/objects/Legacy_Account__c/fields/Shipping_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Zip_Postal_Code__c</fullName>
    <description>Displays Shipping Zip/Postal Code for Legacy Account</description>
    <inlineHelpText>Displays Shipping Zip/Postal Code for Legacy Account</inlineHelpText>
    <label>Shipping Zip/Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>