force-app/main/default/objects/Legacy_Account__c/fields/TM_Region__c.field-meta.xml
<CustomField>
    <fullName>TM_Region__c</fullName>
    <description>Displays CONA Territory Manager Region.</description>
    <inlineHelpText>Displays CONA Territory Manager Region.</inlineHelpText>
    <label>TM Region</label>
    <length>5</length>
    <type>Text</type>
</CustomField>