force-app/main/default/objects/Legacy_Account__c/fields/TM_Territory__c.field-meta.xml
<CustomField>
    <fullName>TM_Territory__c</fullName>
    <description>Displays CONA Territory Manager Territory.</description>
    <inlineHelpText>Displays CONA Territory Manager Territory.</inlineHelpText>
    <label>TM Territory</label>
    <length>5</length>
    <type>Text</type>
</CustomField>