force-app/main/default/objects/Legacy_Account__c/fields/TM_Zone__c.field-meta.xml
<CustomField>
    <fullName>TM_Zone__c</fullName>
    <description>Displays CONA Territory Manager Zone</description>
    <inlineHelpText>Displays CONA Territory Manager Zone</inlineHelpText>
    <label>TM Zone</label>
    <length>5</length>
    <type>Text</type>
</CustomField>